jsonrpc-types/src/snapshots/jsonrpc_types__tests__response_serde-14.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Response::new(JsonRPCResult::<_, ()>::Result(Params { p0: 0, p1: 1 }), None)"
---
{
  "jsonrpc": "2.0",
  "result": {
    "p0": 0,
    "p1": 1
  },
  "id": null
}
