jsonrpc-types/src/snapshots/jsonrpc_types__tests__response_serde-7.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Response::new(JsonRPCResult::<_, ()>::Result(vec![1, - 1]), Some(1))"
---
{
  "jsonrpc": "2.0",
  "result": [
    1,
    -1
  ],
  "id": 1
}
