jsonrpc-types/src/snapshots/jsonrpc_types__tests__response_serde-9.snap
---
source: jsonrpc-types/src/lib.rs
expression: "Response::new(JsonRPCResult::<(),\n            _>::Error(JsonRPCError {\n            code: -1,\n            message: \"message\".to_string(),\n            data: Some(vec![1, - 1]),\n        }), Some(1))"
---
{
  "jsonrpc": "2.0",
  "error": {
    "code": -1,
    "message": "message",
    "data": [
      1,
      -1
    ]
  },
  "id": 1
}
